# django-pylabels

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  README.rst  pyproject.toml  runtests.py
.github/workflows/: build.yml
django_labels/: actions.py  admin.py  apps.py  save_to_buffer.py  setup.cfg  urls.py
django_labels/management/commands/: prepare.py
django_labels/migrations/: 0002_labelspecification_created_and_more.py  0003_rename_updated_labelspecification_modified.py
django_labels/models/: label_specification.py
django_labels/templates/: print_labels_form.html
django_pylabels/: actions.py  utils.py  view_mixins.py
django_pylabels/migrations/: 0001_initial.py
django_pylabels/models/: label_specification.py
django_pylabels/tests/: test_settings.py
django_pylabels/tests/tests/: test_model.py
